WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123330
Fix the ENABLE(CSS_FILTERS) && USE(COORDINATED_GRAPHICS) build after
r157803
https://bugs.webkit.org/show_bug.cgi?id=123330
Summary
Fix the ENABLE(CSS_FILTERS) && USE(COORDINATED_GRAPHICS) build after r157803
Csaba Osztrogonác
Reported
2013-10-25 02:49:02 PDT
SSIA. Patch is coming.
Attachments
Patch
(2.31 KB, patch)
2013-10-25 03:08 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2013-10-25 03:08:45 PDT
Created
attachment 215158
[details]
Patch Coordinated Graphics already has its own implementation for encoding/decoding FilterOperations in Source/WebKit2/Shared/CoordinatedGraphics/CoordinatedGraphicsArgumentCoders.cpp and it works with FilterOperation::VALIDATED_CUSTOM typed filter operations too.
r157803
caused build failure on USE(COORDINATED_GRAPHICS) platforms if ENABLE(CSS_FILTERS) is true due to duplicated encoder/decoder implementation.
Csaba Osztrogonác
Comment 2
2013-10-25 03:14:38 PDT
An ideal fix would be to merge the two code paths ... but I don't know if Apple wants FilterOperation::VALIDATED_CUSTOM or Coordinated Graphics platforms could live without it. So the proposed fix is the most conservative way for the fix without any behavioural change on any platform.
WebKit Commit Bot
Comment 3
2013-10-25 23:35:40 PDT
Comment on
attachment 215158
[details]
Patch Clearing flags on attachment: 215158 Committed
r158081
: <
http://trac.webkit.org/changeset/158081
>
WebKit Commit Bot
Comment 4
2013-10-25 23:35:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug