Fix the ENABLE(CSS_FILTERS) && USE(COORDINATED_GRAPHICS) build after r157803 https://bugs.webkit.org/show_bug.cgi?id=123330

Reviewed by Darin Adler.

* Shared/WebCoreArgumentCoders.cpp:
* Shared/WebCoreArgumentCoders.h:


Canonical link: https://commits.webkit.org/141483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158081 268f45cc-cd09-0410-ab3c-d52691b4dbfc